force-app/main/default/objects/cgcloud__System_Number_Last__c/cgcloud__System_Number_Last__c.object-meta.xml
<CustomObject>
    <description>Last used number of device</description>
    <label>System Number Last</label>
    <nameField>
        <displayFormat>SysLast-{0000000000}</displayFormat>
        <label>System Number Last Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Numbers Last</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>