force-app/main/default/objects/cgcloud__System_Number_Last__c/fields/cgcloud__Last__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last__c</fullName>
    <description>Used last number</description>
    <inlineHelpText>Used last number</inlineHelpText>
    <label>Last</label>
    <length>255</length>
    <type>Text</type>
</CustomField>