force-app/main/default/objects/cgcloud__System_Number_Last__c/fields/cgcloud__System_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__System_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent relation to system number</description>
    <inlineHelpText>Parent relation to system number</inlineHelpText>
    <label>System Number</label>
    <referenceTo>cgcloud__System_Number__c</referenceTo>
    <relationshipLabel>System Numbers Last</relationshipLabel>
    <relationshipName>System_Numbers_Last</relationshipName>
    <type>Lookup</type>
</CustomField>