force-app/main/default/objects/cgcloud__System_Number_Last__c/fields/cgcloud__User_Lu__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Lu__c</fullName>
    <description>Lu/ device of User</description>
    <inlineHelpText>Lu/ device of User</inlineHelpText>
    <label>User Lu</label>
    <length>4</length>
    <type>Text</type>
</CustomField>