force-app/main/default/objects/cgcloud__System_Number_Last__c/validationRules/cgcloud__Prevent_System_Number_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_System_Number_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(cgcloud__System_Number__c), OR(ISBLANK(cgcloud__System_Number__c),ISNULL(cgcloud__System_Number__c)))</errorConditionFormula>
    <errorDisplayField>cgcloud__System_Number__c</errorDisplayField>
    <errorMessage>The System Number can&apos;t be empty.</errorMessage>
</ValidationRule>